--- a/tests/integration/specs/random_waypoint.toml
+++ b/tests/integration/specs/random_waypoint.toml
@@ -1,149 +1,111 @@
 name = "random_waypoint_test"
 duration = 10000
 actions = []
-width = 200.0
-height = 200.0
+width = 20.0
+height = 20.0
+
 [mobility]
 Model = "RandomWaypoint"
-pause_time = 10
+pause_time = 0
+
 [protocol]
 Protocol = "Flooding"
-
-[initial_nodes.node5]
-worker_name = "node5"
-work_dir = "/tmp/random_waypoint_test702227155"
-random_seed = 1218975512
+[initial_nodes.node2]
+worker_name = "node2"
+worker_id = "de40c187094fd700761f22d7a2eaa1d8"
+work_dir = "/tmp/random_waypoint_test144017320"
+random_seed = 1658816333
 operation_mode = "Simulated"
-[initial_nodes.node5.protocol]
-    Protocol = "Flooding"
-[initial_nodes.node5.position]
-    x = 23.193072053280204
-    y = 167.65950690522308
-[initial_nodes.node5.destination]
-    x = 136.21628033575152
-    y = 56.73766094636825
-[initial_nodes.node5.velocity]
-    x = 1.5850469760252526
-    y = 1.6058060054376644
-[initial_nodes.node5.radio_short]
-reliability = 1.0
+packet_queue_size = 3000
+stale_packet_threshold = 3000
+
+[initial_nodes.node2.position]
+x = 2.452417674053404
+y = 6.60803706305855
+
+[initial_nodes.node2.destination]
+x = 10.07455870945735
+y = 5.4753663202882175
+
+[initial_nodes.node2.velocity]
+x = 1.6444294920951097
+y = -0.24436666359140616
+
+[initial_nodes.node2.radio_short]
+timeout = 10000
 interface_name = "wlan0"
 range = 100.0
-[initial_nodes.node5.radio_long]
-reliability = 1.0
-interface_name = "wlan1"
-range = 500.0
-
-[initial_nodes.node4]
-worker_name = "node4"
-work_dir = "/tmp/random_waypoint_test702227155"
-random_seed = 3056050512
-operation_mode = "Simulated"
-[initial_nodes.node4.protocol]
-        Protocol = "Flooding"
-[initial_nodes.node4.position]
-    x = 70.6135154143138
-    y = 5.568666745198403
-[initial_nodes.node4.destination]
-    x = 35.054717662749454
-    y = 174.70424106323185
-[initial_nodes.node4.velocity]
-    x = 1.3234553623404068
-    y = 1.6328533313180085
-[initial_nodes.node4.radio_short]
-reliability = 1.0
-interface_name = "wlan0"
-range = 100.0
-[initial_nodes.node4.radio_long]
-reliability = 1.0
-interface_name = "wlan1"
-range = 500.0
+mac_layer_retries = 8
+mac_layer_base_wait = 16
+max_delay_per_node = 40
 
 [initial_nodes.node1]
 worker_name = "node1"
-work_dir = "/tmp/random_waypoint_test702227155"
-random_seed = 1679700806
+worker_id = "cc7ff070a2b17cb5964c564ff34b6833"
+work_dir = "/tmp/random_waypoint_test144017320"
+random_seed = 886027408
 operation_mode = "Simulated"
-[initial_nodes.node1.protocol]
-        Protocol = "Flooding"
-[initial_nodes.node1.position]
-    x = 90.25481402667567
-    y = 142.35026995113373
-[initial_nodes.node1.destination]
-    x = 14.843397195895447
-    y = 183.36088556388242
-[initial_nodes.node1.velocity]
-    x = 1.4967963305572298
-    y = 1.6538105421471005
-[initial_nodes.node1.radio_short]
-reliability = 1.0
-interface_name = "wlan0"
-range = 100.0
-[initial_nodes.node1.radio_long]
-reliability = 1.0
-interface_name = "wlan1"
-range = 500.0
+packet_queue_size = 3000
+stale_packet_threshold = 3000
 
-[initial_nodes.node2]
-worker_name = "node2"
-work_dir = "/tmp/random_waypoint_test702227155"
-random_seed = 2053388715
-operation_mode = "Simulated"
-[initial_nodes.node2.protocol]
-        Protocol = "Flooding"
-[initial_nodes.node2.position]
-    x = 61.988841002229435
-    y = 191.78870425578677
-[initial_nodes.node2.destination]
-    x = 158.41796502414857
-    y = 75.99956084409523
-[initial_nodes.node2.velocity]
-    x = 1.4680407640677786
-    y = 1.5155867542243384
-[initial_nodes.node2.radio_short]
-reliability = 1.0
+[initial_nodes.node1.position]
+x = 8.00669306708308
+y = 16.36772945397159
+
+[initial_nodes.node1.destination]
+x = 12.486206652602609
+y = 2.368397721269397
+
+[initial_nodes.node1.velocity]
+x = 0.4636926374300167
+y = -1.4491276629628849
+
+[initial_nodes.node1.radio_short]
+timeout = 10000
 interface_name = "wlan0"
 range = 100.0
-[initial_nodes.node2.radio_long]
-reliability = 1.0
-interface_name = "wlan1"
-range = 500.0
+mac_layer_retries = 8
+mac_layer_base_wait = 16
+max_delay_per_node = 40
 
 [initial_nodes.node3]
 worker_name = "node3"
-work_dir = "/tmp/random_waypoint_test702227155"
-random_seed = 2010235849
+worker_id = "4bb5096558cf9d74bb6a59e8961a7dcf"
+work_dir = "/tmp/random_waypoint_test144017320"
+random_seed = 3742434003
 operation_mode = "Simulated"
-[initial_nodes.node3.protocol]
-        Protocol = "Flooding"
+packet_queue_size = 3000
+stale_packet_threshold = 3000
+
 [initial_nodes.node3.position]
-    x = 35.0
-    y = 150.0
+x = 1.560412589652902
+y = 0.7585533543441247
+
 [initial_nodes.node3.destination]
-    x = 50.0
-    y = 140.0
+x = 16.763522726062554
+y = 7.655493992768028
+
 [initial_nodes.node3.velocity]
-    x = 3.0
-    y = -2.1
-# x = 1.3435651276483305
-# y = 1.2453621406105302
+x = 1.2227672699167933
+y = 0.5547123713211086
+
 [initial_nodes.node3.radio_short]
-reliability = 1.0
+timeout = 10000
 interface_name = "wlan0"
 range = 100.0
-[initial_nodes.node3.radio_long]
-reliability = 1.0
-interface_name = "wlan1"
-range = 500.0
+mac_layer_retries = 8
+mac_layer_base_wait = 16
+max_delay_per_node = 40
+
 
 [available_nodes]
 
 [metadata]
-OK_PKT_PATTERN = "ACCEPTED.*DATA"
-DATA_PATTERN = "SENT.*DATA"
 RD_PATTERN = "SOMETHINGTHATWILLNEVERMATCH"
-RE_PATTERN = "SOMETHINGTHATWILLNEVERMATCH"
-RT_PATTERN = "SOMETHINGTHATWILLNEVERMATCH"
 MAINTENANCE_PATTERN = "SOMETHINGTHATWILLNEVERMATCH"
-ROUTE_BREAK_PATTERN = "SOMETHINGTHATWILLNEVERMATCH"
 RD_FAIL_PATTERN = "SOMETHINGTHATWILLNEVERMATCH"
+OK_PKT_PATTERN = "ACCEPTED.*DATA"
+ROUTE_BREAK_PATTERN = "SOMETHINGTHATWILLNEVERMATCH"
+RT_PATTERN = "SOMETHINGTHATWILLNEVERMATCH"
+DATA_PATTERN = "SENT.*DATA"
+RE_PATTERN = "SOMETHINGTHATWILLNEVERMATCH"
