--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,7 +16,7 @@ rand_distr = "0.4.0"
 rustc-serialize = "0.3"
 serde_derive = "1.0.10"
 serde = "1.0.10"
-serde_cbor = "0.11.2"
+#serde_cbor = "0.11.2"
 serde_json = "1.0"
 clap = "2.32.0"
 slog = "2.4.1"
@@ -47,6 +47,7 @@ diesel_migrations = "1.4.0"
 crossbeam-channel = "0.5.0"
 sysinfo = "0.15.6"
 peroxide = "0.30.9"
+bincode = "1.3.3"
 
 [target.'cfg(target_os = "linux")'.dependencies]
 linux-embedded-hal = "0.2.2"
