--- a/tests/integration/specs/aodvda_basic.toml
+++ b/tests/integration/specs/aodvda_basic.toml
@@ -1,13 +1,13 @@
-name = "aodv_basic"
+name = "aodvda_basic"
 duration = 6000
 actions = [ "Ping node1 node25 1500",
             "Ping node7 node25 2500"]
 width = 200.0
 height = 200.0
-random_seed = 12345
+random_seed = 1234895
 
 [protocol]
-Protocol = "AODV"
+Protocol = "AODVDA"
 active_route_timeout = 3000
 net_diameter =  15
 node_traversal_time = 40
@@ -17,7 +17,7 @@ rreq_retries = 2
 [initial_nodes.node2]
 worker_name = "node2"
 worker_id = "a71ad89536b8c00b47fedcdf18f16fbc"
-work_dir = "/tmp/aodv_basic546554433"
+work_dir = "/tmp/aodvda_basic546554433"
 random_seed = 2514813795
 operation_mode = "Simulated"
 
@@ -34,15 +34,10 @@ reliability = 1.0
 interface_name = "wlan0"
 range = 30.0
 
-[initial_nodes.node2.radio_long]
-reliability = 1.0
-interface_name = "wlan1"
-range = 60.0
-
 [initial_nodes.node7]
 worker_name = "node7"
 worker_id = "b7eec78c8a2fe5a3a131926851e55e31"
-work_dir = "/tmp/aodv_basic546554433"
+work_dir = "/tmp/aodvda_basic546554433"
 random_seed = 3817657197
 operation_mode = "Simulated"
 
@@ -59,15 +54,10 @@ reliability = 1.0
 interface_name = "wlan0"
 range = 30.0
 
-[initial_nodes.node7.radio_long]
-reliability = 1.0
-interface_name = "wlan1"
-range = 60.0
-
 [initial_nodes.node8]
 worker_name = "node8"
 worker_id = "38761f79c2f9104923d7969b3b56258f"
-work_dir = "/tmp/aodv_basic546554433"
+work_dir = "/tmp/aodvda_basic546554433"
 random_seed = 2748921375
 operation_mode = "Simulated"
 
@@ -84,15 +74,10 @@ reliability = 1.0
 interface_name = "wlan0"
 range = 30.0
 
-[initial_nodes.node8.radio_long]
-reliability = 1.0
-interface_name = "wlan1"
-range = 60.0
-
 [initial_nodes.node16]
 worker_name = "node16"
 worker_id = "fda5738053ab2bc2959bc72e60a7dcfe"
-work_dir = "/tmp/aodv_basic546554433"
+work_dir = "/tmp/aodvda_basic546554433"
 random_seed = 3421649936
 operation_mode = "Simulated"
 
@@ -109,15 +94,10 @@ reliability = 1.0
 interface_name = "wlan0"
 range = 30.0
 
-[initial_nodes.node16.radio_long]
-reliability = 1.0
-interface_name = "wlan1"
-range = 60.0
-
 [initial_nodes.node22]
 worker_name = "node22"
 worker_id = "d7044deed33871116c80085a41d545ad"
-work_dir = "/tmp/aodv_basic546554433"
+work_dir = "/tmp/aodvda_basic546554433"
 random_seed = 1999032164
 operation_mode = "Simulated"
 
@@ -134,15 +114,10 @@ reliability = 1.0
 interface_name = "wlan0"
 range = 30.0
 
-[initial_nodes.node22.radio_long]
-reliability = 1.0
-interface_name = "wlan1"
-range = 60.0
-
 [initial_nodes.node12]
 worker_name = "node12"
 worker_id = "d329b2794b7fe0fb1f104cb60c725a68"
-work_dir = "/tmp/aodv_basic546554433"
+work_dir = "/tmp/aodvda_basic546554433"
 random_seed = 3243020338
 operation_mode = "Simulated"
 
@@ -159,15 +134,10 @@ reliability = 1.0
 interface_name = "wlan0"
 range = 30.0
 
-[initial_nodes.node12.radio_long]
-reliability = 1.0
-interface_name = "wlan1"
-range = 60.0
-
 [initial_nodes.node15]
 worker_name = "node15"
 worker_id = "12009ac12ed879bfccac63264f202485"
-work_dir = "/tmp/aodv_basic546554433"
+work_dir = "/tmp/aodvda_basic546554433"
 random_seed = 2592505925
 operation_mode = "Simulated"
 
@@ -184,15 +154,10 @@ reliability = 1.0
 interface_name = "wlan0"
 range = 30.0
 
-[initial_nodes.node15.radio_long]
-reliability = 1.0
-interface_name = "wlan1"
-range = 60.0
-
 [initial_nodes.node20]
 worker_name = "node20"
 worker_id = "0f1f4716fc6a43f6ed09b54f9cde31d3"
-work_dir = "/tmp/aodv_basic546554433"
+work_dir = "/tmp/aodvda_basic546554433"
 random_seed = 1584223798
 operation_mode = "Simulated"
 
@@ -209,15 +174,10 @@ reliability = 1.0
 interface_name = "wlan0"
 range = 30.0
 
-[initial_nodes.node20.radio_long]
-reliability = 1.0
-interface_name = "wlan1"
-range = 60.0
-
 [initial_nodes.node6]
 worker_name = "node6"
 worker_id = "be50d3a9d0ed837f5f904bf4f41dd83b"
-work_dir = "/tmp/aodv_basic546554433"
+work_dir = "/tmp/aodvda_basic546554433"
 random_seed = 1664390631
 operation_mode = "Simulated"
 
@@ -234,15 +194,10 @@ reliability = 1.0
 interface_name = "wlan0"
 range = 30.0
 
-[initial_nodes.node6.radio_long]
-reliability = 1.0
-interface_name = "wlan1"
-range = 60.0
-
 [initial_nodes.node14]
 worker_name = "node14"
 worker_id = "6713cd61935f9b14751df6edd1b63bef"
-work_dir = "/tmp/aodv_basic546554433"
+work_dir = "/tmp/aodvda_basic546554433"
 random_seed = 116464221
 operation_mode = "Simulated"
 
@@ -259,15 +214,10 @@ reliability = 1.0
 interface_name = "wlan0"
 range = 30.0
 
-[initial_nodes.node14.radio_long]
-reliability = 1.0
-interface_name = "wlan1"
-range = 60.0
-
 [initial_nodes.node4]
 worker_name = "node4"
 worker_id = "15aa437afc997313850bbfa30e4bb49d"
-work_dir = "/tmp/aodv_basic546554433"
+work_dir = "/tmp/aodvda_basic546554433"
 random_seed = 4078367365
 operation_mode = "Simulated"
 
@@ -284,15 +234,10 @@ reliability = 1.0
 interface_name = "wlan0"
 range = 30.0
 
-[initial_nodes.node4.radio_long]
-reliability = 1.0
-interface_name = "wlan1"
-range = 60.0
-
 [initial_nodes.node17]
 worker_name = "node17"
 worker_id = "e521e896758592750ab01e364c21df6b"
-work_dir = "/tmp/aodv_basic546554433"
+work_dir = "/tmp/aodvda_basic546554433"
 random_seed = 1278201472
 operation_mode = "Simulated"
 
@@ -309,15 +254,10 @@ reliability = 1.0
 interface_name = "wlan0"
 range = 30.0
 
-[initial_nodes.node17.radio_long]
-reliability = 1.0
-interface_name = "wlan1"
-range = 60.0
-
 [initial_nodes.node21]
 worker_name = "node21"
 worker_id = "ca7262a4ae4347d1286b9fb98a5f09da"
-work_dir = "/tmp/aodv_basic546554433"
+work_dir = "/tmp/aodvda_basic546554433"
 random_seed = 1832365787
 operation_mode = "Simulated"
 
@@ -334,15 +274,10 @@ reliability = 1.0
 interface_name = "wlan0"
 range = 30.0
 
-[initial_nodes.node21.radio_long]
-reliability = 1.0
-interface_name = "wlan1"
-range = 60.0
-
 [initial_nodes.node5]
 worker_name = "node5"
 worker_id = "8891752f7656f3db1f85f941bc1cce7c"
-work_dir = "/tmp/aodv_basic546554433"
+work_dir = "/tmp/aodvda_basic546554433"
 random_seed = 3976737039
 operation_mode = "Simulated"
 
@@ -359,15 +294,10 @@ reliability = 1.0
 interface_name = "wlan0"
 range = 30.0
 
-[initial_nodes.node5.radio_long]
-reliability = 1.0
-interface_name = "wlan1"
-range = 60.0
-
 [initial_nodes.node23]
 worker_name = "node23"
 worker_id = "29e5ac1a712657d7298d24449698295e"
-work_dir = "/tmp/aodv_basic546554433"
+work_dir = "/tmp/aodvda_basic546554433"
 random_seed = 1899737547
 operation_mode = "Simulated"
 
@@ -384,15 +314,10 @@ reliability = 1.0
 interface_name = "wlan0"
 range = 30.0
 
-[initial_nodes.node23.radio_long]
-reliability = 1.0
-interface_name = "wlan1"
-range = 60.0
-
 [initial_nodes.node11]
 worker_name = "node11"
 worker_id = "27c72d5fda58e09a5638cc09b2c0194a"
-work_dir = "/tmp/aodv_basic546554433"
+work_dir = "/tmp/aodvda_basic546554433"
 random_seed = 2073215166
 operation_mode = "Simulated"
 
@@ -409,15 +334,10 @@ reliability = 1.0
 interface_name = "wlan0"
 range = 30.0
 
-[initial_nodes.node11.radio_long]
-reliability = 1.0
-interface_name = "wlan1"
-range = 60.0
-
 [initial_nodes.node24]
 worker_name = "node24"
 worker_id = "260be63cf6591b334bca58db073f0ca1"
-work_dir = "/tmp/aodv_basic546554433"
+work_dir = "/tmp/aodvda_basic546554433"
 random_seed = 1166593990
 operation_mode = "Simulated"
 
@@ -434,15 +354,10 @@ reliability = 1.0
 interface_name = "wlan0"
 range = 30.0
 
-[initial_nodes.node24.radio_long]
-reliability = 1.0
-interface_name = "wlan1"
-range = 60.0
-
 [initial_nodes.node25]
 worker_name = "node25"
 worker_id = "4f5930774b32c2111d50b9121a742612"
-work_dir = "/tmp/aodv_basic546554433"
+work_dir = "/tmp/aodvda_basic546554433"
 random_seed = 3934045209
 operation_mode = "Simulated"
 
@@ -459,15 +374,10 @@ reliability = 1.0
 interface_name = "wlan0"
 range = 30.0
 
-[initial_nodes.node25.radio_long]
-reliability = 1.0
-interface_name = "wlan1"
-range = 60.0
-
 [initial_nodes.node10]
 worker_name = "node10"
 worker_id = "8277d93950df8d0584210a2a6f0c84d4"
-work_dir = "/tmp/aodv_basic546554433"
+work_dir = "/tmp/aodvda_basic546554433"
 random_seed = 3621251753
 operation_mode = "Simulated"
 
@@ -484,15 +394,10 @@ reliability = 1.0
 interface_name = "wlan0"
 range = 30.0
 
-[initial_nodes.node10.radio_long]
-reliability = 1.0
-interface_name = "wlan1"
-range = 60.0
-
 [initial_nodes.node13]
 worker_name = "node13"
 worker_id = "04b0872551514322720e26f5e0806456"
-work_dir = "/tmp/aodv_basic546554433"
+work_dir = "/tmp/aodvda_basic546554433"
 random_seed = 1324950295
 operation_mode = "Simulated"
 
@@ -509,15 +414,10 @@ reliability = 1.0
 interface_name = "wlan0"
 range = 30.0
 
-[initial_nodes.node13.radio_long]
-reliability = 1.0
-interface_name = "wlan1"
-range = 60.0
-
 [initial_nodes.node18]
 worker_name = "node18"
 worker_id = "a2377c1dac36b0c6bdffab4149152578"
-work_dir = "/tmp/aodv_basic546554433"
+work_dir = "/tmp/aodvda_basic546554433"
 random_seed = 3000022007
 operation_mode = "Simulated"
 
@@ -534,15 +434,10 @@ reliability = 1.0
 interface_name = "wlan0"
 range = 30.0
 
-[initial_nodes.node18.radio_long]
-reliability = 1.0
-interface_name = "wlan1"
-range = 60.0
-
 [initial_nodes.node19]
 worker_name = "node19"
 worker_id = "f96a326e5a993a23850bb8acaab5411e"
-work_dir = "/tmp/aodv_basic546554433"
+work_dir = "/tmp/aodvda_basic546554433"
 random_seed = 1825150256
 operation_mode = "Simulated"
 
@@ -559,15 +454,10 @@ reliability = 1.0
 interface_name = "wlan0"
 range = 30.0
 
-[initial_nodes.node19.radio_long]
-reliability = 1.0
-interface_name = "wlan1"
-range = 60.0
-
 [initial_nodes.node9]
 worker_name = "node9"
 worker_id = "67e00d519637c6e8543700cf7838e9f2"
-work_dir = "/tmp/aodv_basic546554433"
+work_dir = "/tmp/aodvda_basic546554433"
 random_seed = 975514788
 operation_mode = "Simulated"
 
@@ -584,15 +474,10 @@ reliability = 1.0
 interface_name = "wlan0"
 range = 30.0
 
-[initial_nodes.node9.radio_long]
-reliability = 1.0
-interface_name = "wlan1"
-range = 60.0
-
 [initial_nodes.node1]
 worker_name = "node1"
 worker_id = "b453837ec7dc7a7bef6397dd9468ee34"
-work_dir = "/tmp/aodv_basic546554433"
+work_dir = "/tmp/aodvda_basic546554433"
 random_seed = 1656507221
 operation_mode = "Simulated"
 
@@ -609,15 +494,10 @@ reliability = 1.0
 interface_name = "wlan0"
 range = 30.0
 
-[initial_nodes.node1.radio_long]
-reliability = 1.0
-interface_name = "wlan1"
-range = 60.0
-
 [initial_nodes.node3]
 worker_name = "node3"
 worker_id = "fea55473d4cb69c1fb10434bd700442a"
-work_dir = "/tmp/aodv_basic546554433"
+work_dir = "/tmp/aodvda_basic546554433"
 random_seed = 1619236551
 operation_mode = "Simulated"
 
@@ -633,11 +513,6 @@ y = 0.0
 reliability = 1.0
 interface_name = "wlan0"
 range = 30.0
-
-[initial_nodes.node3.radio_long]
-reliability = 1.0
-interface_name = "wlan1"
-range = 60.0
 
 [available_nodes]
 
